refact: solve some deprecation warnings